--- a/jollys_receiving/stock_audit/doctype/auto_reorder_settings/auto_reorder_settings.json
+++ b/jollys_receiving/stock_audit/doctype/auto_reorder_settings/auto_reorder_settings.json
@@ -9,21 +9,9 @@
  "engine": "InnoDB",
  "field_order": [
   "schedule_section",
-  "sunday",
-  "monday",
-  "tuesday",
-  "wednesday",
-  "thursday",
-  "friday",
-  "saturday",
+  "schedule",
   "locations_section",
-  "gg",
-  "mini",
-  "jppm",
-  "kg",
-  "mega",
-  "mega_stock",
-  "ws"
+  "locations"
  ],
  "fields": [
   {
@@ -32,100 +20,26 @@
    "label": "Schedule"
   },
   {
-   "default": "0",
-   "fieldname": "sunday",
-   "fieldtype": "Check",
-   "label": "Sunday"
-  },
-  {
-   "default": "0",
-   "fieldname": "monday",
-   "fieldtype": "Check",
-   "label": "Monday"
-  },
-  {
-   "default": "0",
-   "fieldname": "tuesday",
-   "fieldtype": "Check",
-   "label": "Tuesday"
-  },
-  {
-   "default": "0",
-   "fieldname": "wednesday",
-   "fieldtype": "Check",
-   "label": "Wednesday"
-  },
-  {
-   "default": "0",
-   "fieldname": "thursday",
-   "fieldtype": "Check",
-   "label": "Thursday"
-  },
-  {
-   "default": "0",
-   "fieldname": "friday",
-   "fieldtype": "Check",
-   "label": "Friday"
-  },
-  {
-   "default": "0",
-   "fieldname": "saturday",
-   "fieldtype": "Check",
-   "label": "Saturday"
-  },
-  {
    "fieldname": "locations_section",
    "fieldtype": "Section Break",
    "label": "Locations"
   },
   {
-   "default": "0",
-   "fieldname": "gg",
-   "fieldtype": "Check",
-   "label": "GG Stock - JP"
+   "fieldname": "schedule",
+   "fieldtype": "Table",
+   "options": "Auto Reorder Settings Schedule"
   },
   {
-   "default": "0",
-   "fieldname": "mini",
-   "fieldtype": "Check",
-   "label": "JPMini Stock - JP"
-  },
-  {
-   "default": "0",
-   "fieldname": "jppm",
-   "fieldtype": "Check",
-   "label": "JPPM Stock - JP"
-  },
-  {
-   "default": "0",
-   "fieldname": "kg",
-   "fieldtype": "Check",
-   "label": "KG Stock - JP"
-  },
-  {
-   "default": "0",
-   "fieldname": "mega",
-   "fieldtype": "Check",
-   "label": "Mega Retail - JP"
-  },
-  {
-   "default": "0",
-   "fieldname": "mega_stock",
-   "fieldtype": "Check",
-   "label": "Mega Stock - JP"
-  },
-  {
-   "default": "0",
-   "fieldname": "ws",
-   "fieldtype": "Check",
-   "label": "WS Stock - JP"
+   "fieldname": "locations",
+   "fieldtype": "Table",
+   "options": "Auto Reorder Settings Location"
   }
  ],
  "hide_toolbar": 1,
  "in_create": 1,
  "issingle": 1,
  "links": [],
- "modified": "2025-01-01 22:03:24.802566",
+ "modified": "2025-04-04 10:15:03.992855",
  "modified_by": "Administrator",
  "module": "Stock Audit",
  "name": "Auto Reorder Settings",
